    updates and prompt the user when we notice one. (closes MS #2540)
  * Added tests/basic, as a simple test of a few functions (closes MS #2537)
  * fixed double-prompting on sites that have more than one User ID
    (closes MS #2567)
  * report server implementation name and version with every query (closes
    MS # 2564)
  * support x509pem PKC format in addition to x509der (addresses MS #2566)

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Fri, 29 Oct 2010 00:53:37 -0400

msva-perl (0.5) upstream;

  * If ${MSVA_KEYSERVER} is unset or blank, default to using keyserver
    from ${GNUPGHOME}/gpg.conf if that file exists. (addresses MS #2080)
  * Under Linux, report details about the requesting process if we can
    learn them from /proc (closes MS #2005)
  * Conditionally rely on Gtk2 perl module -- no marginal UI without it,
    but you can also install the MSVA now without needing to pull in a
    bunch of Gtk libs (closes MS #2514)
  * Sending a SIGHUP to the running server now re-execs it cleanly,
    keeping the same port assignments and monitoring the same child
    process.  This can be used to upgrade running msva instances after a
    package update (closes MS #2532)

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Tue, 12 Oct 2010 03:50:02 -0400

msva-perl (0.4) upstream;

  * removed dependency on monkeysphere package -- just invoke GnuPG
    directly (needs GnuPG::Interface, Regexp::Common) (closes MS #2034)
  * adds MSVA_KEYSERVER_POLICY and MSVA_KEYSERVER environment variables.
  * added a marginal UI (needs Gtk2 perl module) (closes MS #2004)
  * Filter incoming uids to match a strict regex (closes MS #2270)
  * Trivially untaint the environment for the single child process
    (closes MS #2461)

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Mon, 04 Oct 2010 01:06:52 -0400

msva-perl (0.3) upstream;

  * packaging re-organization
  * properly closing piped monkeysphere call